--- a/SGE/Properties/launchSettings.json
+++ b/SGE/Properties/launchSettings.json
@@ -13,7 +13,7 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "applicationUrl": "http://localhost:5246",
+      "applicationUrl": "http://localhost:5246;http://172.16.100.107:5246;",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
