--- a/SGE/appsettings.json
+++ b/SGE/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DbConnection": "Data Source=172.16.100.107\\SQLSENAI; Initial Catalog=dbEscola; TrustServerCertificate=True; User ID=remoto;Password=Senai123;"
+    "DbConnection": "Data Source=172.16.100.107\\SQLSENAI; Initial Catalog=dbEscola; TrustServerCertificate=True; User ID=Remoto;Password=Senai123;"
   }
 }
