--- a/SGE/appsettings.json
+++ b/SGE/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DbConnection": "Data Source=AI11-1264708\\SQLSENAI; Initial Catalog=dbEscola;Integrated Security=True; TrustServerCertificate=True;"
+    "DbConnection": "Data Source=172.16.100.107\\SQLSENAI; Initial Catalog=dbEscola; TrustServerCertificate=True; User ID=Remoto;Password=Senai123;"
   }
 }
