--- a/SGE/Properties/launchSettings.json
+++ b/SGE/Properties/launchSettings.json
@@ -4,7 +4,7 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:26119",
+      "applicationUrl": "http://localhost:26119; http://192.168.1.33:5246",
       "sslPort": 44326
     }
   },
@@ -13,7 +13,7 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "applicationUrl": "http://localhost:5246;http://172.16.100.107:5246;",
+      "applicationUrl": "http://localhost:5246;http://192.168.1.33:5246;",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
