--- a/SGE/Properties/launchSettings.json
+++ b/SGE/Properties/launchSettings.json
@@ -13,7 +13,7 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "applicationUrl": "http://localhost:5246;http://172.16.100.107:5246;",
+      "applicationUrl": "http://localhost:5246;http://192.168.1.36;",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
@@ -22,7 +22,7 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "applicationUrl": "https://localhost:7190;http://localhost:5246",
+      "applicationUrl": "https://localhost:7190;http://localhost:5246;https://192.168.1.36;",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
